--- a/.projections.json
+++ b/.projections.json
@@ -1,10 +1,10 @@
 {
-  "mylib/*.py": {
+  "goodbyethings/*.py": {
     "type": "python",
     "alternate": "tests/{dirname}/test_{basename}.py"
   },
   "tests/**/test_*.py": {
     "type": "test",
-    "alternate": "mylib/{}.py"
+    "alternate": "goodbyethings/{}.py"
   }
 }
