--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,12 +20,13 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v6
       with:
         python-version-file: .python-version
+        pip-version: '25.2'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        # python -m pip install --upgrade pip
         pip install pip-tools
         [ -f requirements.txt ] && pip-sync requirements.txt dev-requirements.txt || pip-sync dev-requirements.txt
     - name: Run linter
