Disable pytest on CI
There aren't any tests yet, so the pytest command exits with a non-zero
exit status.

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,5 +35,5 @@ jobs:
       run: make format
     - name: Check types
       run: make types
-    - name: Run tests
-      run: pytest -o console_output_style=classic -v
+    # - name: Run tests
+    #   run: pytest -o console_output_style=classic -v
